fixed weird scroll glitch on ios

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,10 @@
 /* styles.css */
 /* Hero Section */
 .hero {
-  height: calc(var(--vh, 1vh) * 100); /* Use custom viewport height */
+  height: calc(
+    var(--vh, 1vh) * 100
+  ); /* Fallback for browsers that don't support dvh */
+  height: 100dvh; /* Use dynamic viewport height for modern browsers */
   background: linear-gradient(rgba(18, 18, 18, 0.8), rgba(18, 18, 18, 0.8)),
     url("../images/dunes.jpg") no-repeat center center/cover;
   display: flex;
